@@ -9,7 +9,7 @@
 
     <groupId>com.github.leonhad</groupId>
     <artifactId>comic-info-editor</artifactId>
-    <version>1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>Comic Info Editor</name>
     <description>Comic Info Editor</description>
     <url>https://github.com/leonhad/comic-info-editor</url>
@@ -59,9 +59,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.junrar</groupId>
-            <artifactId>junrar</artifactId>
-            <version>7.5.5</version>
+            <groupId>net.sf.sevenzipjbinding</groupId>
+            <artifactId>sevenzipjbinding</artifactId>
+            <version>16.02-2.01</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.sevenzipjbinding</groupId>
+            <artifactId>sevenzipjbinding-all-platforms</artifactId>
+            <version>16.02-2.01</version>
         </dependency>
     </dependencies>
 
