@@ -1,6 +1,8 @@
 package com.github.leonhad;
 
 import com.github.leonhad.forms.MainForm;
+import net.sf.sevenzipjbinding.SevenZip;
+import net.sf.sevenzipjbinding.SevenZipNativeInitializationException;
 
 import javax.swing.*;
 
@@ -10,6 +12,13 @@ public class Main {
         System.setProperty("sun.java2d.uiScale.enabled", "true");
         System.setProperty("sun.java2d.uiScale", "1.5");
         System.setProperty("java.awt.headless", "false");
+
+        try {
+            SevenZip.initSevenZipFromPlatformJAR();
+            System.out.println("7-Zip-JBinding library was initialized");
+        } catch (SevenZipNativeInitializationException e) {
+            JOptionPane.showMessageDialog(null, e.getMessage(), "Unexpected Error", JOptionPane.ERROR_MESSAGE);
+        }
 
         try {
             UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
