@@ -1,5 +1,6 @@
 package com.github.leonhad.fileformat;
 
+import com.github.leonhad.fileformat.open.RARFileOpener;
 import com.github.leonhad.fileformat.open.ZipFileOpener;
 
 import java.io.File;
@@ -8,7 +9,7 @@ import java.util.List;
 
 public final class FileFactory {
 
-    private static final List<FileOpener> FILE_OPENERS = List.of(new ZipFileOpener());
+    private static final List<FileOpener> FILE_OPENERS = List.of(new ZipFileOpener(), new RARFileOpener());
 
     public static FileOpener getOpener(File file) throws IOException {
         var opener = FILE_OPENERS.stream().filter(f -> f.canOpen(file))
