@@ -4,7 +4,7 @@ public final class Constants {
 
     public static final String TITLE = "Comic Info Editor";
 
-    public static final String VERSION = "1.0.0";
+    public static final String VERSION = "1.1.0";
 
     private Constants() {
         // Not used.
