@@ -1,5 +1,6 @@
 Comic Info Editor NEWS - User visible changes.
 
+2025-02-24 Added CBR and RAR files support (open only).
 2025-02-22 Initial version.
 
 -----
